--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,11 +8,10 @@
   </div>
   <div class="col-12 col-md-6">
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-
       <div class="form-floating mb-3 w-100">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: " " %>
         <%= f.label :email %>
+        <%= render partial: 'devise/shared/error_message', locals: { resource: resource, field: :email } %>
       </div>
 
       <div class="actions d-grid">
